# gcalendar

./: .gitignore  LICENSE  Makefile  README  README.md  common.mk  configure.ac
data/: Makefile  Makefile.am  holidays-de.xml
src/: Makefile  Makefile.am  calendar.c  calendar.h  commands.h  compat.c  compat.h  gcal-remote.c  holidays.c  holidays.h  ipc-server.c  ipc-server.h  main.c
